--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.39</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.lgooddatepicker</groupId>
+			<artifactId>LGoodDatePicker</artifactId>
+			<version>10.3.1</version>
+		</dependency>
 	</dependencies>
 </project>
